--- a/assets/scss/pages/_blog.scss
+++ b/assets/scss/pages/_blog.scss
@@ -83,8 +83,7 @@
             // margin:1.5rem 0;
             font-family: "Unica One", cursive;
             position: fixed;
-            right: calc(100vw - 1000px);
-
+            right: calc(100vw - 1000px + -6.5rem);
             .btn {
                 display: flex;
                 align-items: center;
